# verified-agent

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  slides.html  slides.ipynb  verified-agent.code-workspace
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
acl2-mcp/: LICENSE  README.md  SECURITY.md  pyproject.toml
acl2-mcp/acl2_mcp/: __init__.py  server.py
docs/: acl2-check.html  acl2-fns.html  acl2-init.html  acl2-proclaims.html  acl2.html  akcl-acl2-trace.html  apply-constraints.html  apply-prim.html  apply-raw.html  apply.html  basis-a.html  basis-b.html  bdd.html  boot-strap-pass-2-a.html  boot-strap-pass-2-b.html  defpkgs.html  defthm.html  defuns.html  float-a.html  float-b.html  float-raw.html  futures-raw.html  history-management.html  hons-raw.html  hons.html  index.html  index2.html  induct.html  init.html  interface-raw.html  ld.html  linear-a.html  linear-b.html  memoize-raw.html  memoize.html  multi-threading-raw.html  non-linear.html  other-events.html  other-processes.html  parallel-raw.html  (+13 more)
src/: Verified_Agent_Spec.md  agent-runner.acl2  agent-runner.ipynb  agent-runner.lisp  chat-demo.acl2  chat-demo.ipynb  chat-demo.lisp  chat-lib.acl2  chat-lib.ipynb  chat-lib.lisp  chat-openai-multi.lisp  chat-openai.ipynb  chat-openai.lisp  chat.ipynb  chat.lisp  context-manager.ipynb  context-manager.lisp  http-json-raw.lsp  http-json.acl2  http-json.ipynb  http-json.lisp  llm-client-raw.lsp  llm-client.acl2  llm-client.ipynb  llm-client.lisp  llm-types.ipynb  llm-types.lisp  mcp-client-raw.lsp  mcp-client.acl2  (+9 more)
(+1971 files in other folders)
